# DietPi-Dashboard

./: .gitignore  .versionrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md  SECURITY.md  build.rs  config-backend.toml  config-frontend.toml  config.toml  package.json  pnpm-lock.yaml  standard-version-toml.js
.github/: FUNDING.yml  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: binary-bloat.yml  cargo-bloat.yml  codeql-analysis.yml  daily-build.yml  dependabot-auto-merge.yml  dependabot-fix.yml  dependabot-lockfile-fix.yml  dependbot-auto-merge.yml  push-build.yml
crates/backend/: Cargo.toml
crates/backend/src/: actions.rs  client.rs  getters.rs  main.rs  terminal.rs
crates/config/: Cargo.toml
crates/config/src/: backend.rs  custom_serde.rs  frontend.rs  lib.rs
crates/config/templates/: config-backend.template.toml  config-frontend.template.toml
crates/frontend/: Cargo.toml
crates/frontend/assets/css/: browser.css  global.css  process.css  software.css  system.css  vars.css
crates/frontend/assets/js/: nomini.js  xterm-5.5.0.js
crates/frontend/src/: main.rs
crates/frontend/src/backend/: cache.rs  conn.rs  mod.rs
crates/frontend/src/http/: query_array.rs  response.rs  router.rs  statics.rs
crates/frontend/src/pages/: browser.rs  config.rs  login.rs  mod.rs  process.rs  service.rs  software.rs  template.rs
crates/frontend/src/pages/system/: fragments.rs  mod.rs
crates/proto/: Cargo.toml
crates/proto/src/: backend.rs  frontend.rs  lib.rs
crates/server/: Cargo.toml
crates/server/assets/css/: browser.css  global.css  management.css  software.css  system.css  xterm-5.5.0.css
crates/server/assets/js/: components.js  fixi.js  microlight-0.0.7.js  nomini.js
crates/server/src/: main.rs
crates/server/src/backend/: conn.rs  mod.rs
crates/server/src/http/: auth.rs  mod.rs  request.rs  router.rs
crates/server/src/pages/: browser.rs  login.rs  management.rs  mod.rs  process.rs  software.rs  template.rs  terminal.rs
crates/server/src/pages/system/: fragments.rs  graph.rs  mod.rs
frontend/: .pnp.cjs  .prettierrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts
frontend/src/: App.svelte  main.ts  types.ts  vite-env.d.ts  websocket.ts
frontend/src/components/: Card.svelte  Graph.svelte  NavbarLink.svelte  SidebarMenu.svelte
frontend/src/pages/: FileBrowser.svelte  Home.svelte  Management.svelte  Process.svelte  Service.svelte  Software.svelte  Terminal.svelte
frontend/src/pages/home/: Graph.svelte  GraphCard.svelte  Main.svelte  StatsCard.svelte  StatsRow.svelte
frontend/src/shared-components/: Card.svelte
frontend/src/types/: BackendData.ts  FrontendRequest.ts
schemas/: BackendData.jtd.json  FrontendRequest.jtd.json
scripts/: build-assets.bash  build-release.bash  clean-css.bash  run-dev.bash
src/: config.rs  main.rs  page_handlers.rs  routes.rs  shared.rs  socket_handlers.rs  systemdata.rs  tls.rs
src/backend/: Cargo.toml  Cross.toml  build.rs  data.go  go.mod  go.sum  main.go  sockets.go
src/backend/.cargo/: config.toml
src/backend/lib/: compress.go  costants.go  sockets.go  systemdata.go  terminal.go
src/backend/public/: test.txt
src/backend/src/: config.rs  main.rs  page_handlers.rs  shared.rs  socket_handlers.rs  sockets.rs  systemdata.rs  terminal.rs  types.rs
src/backend/systemdata/: systemdata.go
src/frontend/: .gitignore  index.html  microlight.d.ts  package.json  postcss.config.js  rollup.config.js  semver-compare-multi.d.ts  tailwind.config.js  tsconfig.json  vite.config.js  windi.config.js  windi.config.ts
src/frontend/public/: index.html
src/frontend/src/: App.svelte  main.ts  types.ts  version.js
src/frontend/src/components/: Card.svelte  NavbarLink.svelte
src/frontend/src/pages/: FileBrowser.svelte  Home.svelte  Management.svelte  Process.svelte  Service.svelte  Software.svelte  Terminal.svelte  Test.svelte
src/frontend/src/routes/: routes.svelte
src/frontend/src/store/: store.ts
src/types/: BackendData.rs  FrontendRequest.rs  mod.rs
