[package]
name = "dietpi-dashboard"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "macros",
    "time",
    "sync",
    "fs",
    "process",
] }
pty-process = { version = "0.4.0", features = ["async"] }
psutil = "3.2.2"
ring = "0.17.4"
figment = { version = "0.10", features = ["toml", "env"] }
if-addrs = "0.10.2"
zip = { version = "0.6.6", default-features = false, features = ["time"] }
walkdir = "2.4.0"
jsonwebtoken = { version = "9.0.0", default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
anyhow = "1.0.75"
once_cell = "1.18.0"
serde_json = "1.0.107"
tracing = { version = "0.1.39", features = ["release_max_level_debug"] }
tracing-subscriber = "0.3.17"
hyper = { version = "0.14.27", features = ["server", "http1"] }
tokio-tungstenite = "0.20.1"
getrandom = "0.2.10"
hex = "0.4.3"
vite-embed = { git = "https://github.com/ravenclaw900/vite-embed", version = "0.1.0", features = ["prod"], optional = true }
mime_guess = { version = "2.0.4", default-features = false }
flexible-hyper-server-tls = "0.1.1"
futures-util = { version = "0.3.28", default-features = false }

[features]
default = ["frontend"]
frontend = ["dep:vite-embed"]
dev = ["frontend", "vite-embed?/dev"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[profile.release.package.serde]
opt-level = 3

[profile.release.package.psutil]
opt-level = 3

[profile.release.package.zip]
opt-level = 3

[profile.release.package."*"]
opt-level = "s"
