[package]
name = "dietpi-dashboard"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3.2", default-features = false, features = ["websocket", "tls"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
simple_logger = { version = "2.1.0", default-features = false, features = ["colors"] }
log = "0.4.14"
include_dir = {version = "0.7.2", optional = true}
lazy_static = "1.4.0"
futures = "0.3.21"
nanoserde = "0.1.29"
pty-process = "0.2.0"
psutil = "3.2.2"
infer = { version = "0.7.0", default-features = false }
sha2 = "0.10.2"
toml = "0.5.8"
if-addrs = "0.7.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate", "time"] }
walkdir = "2.3.2"
biscuit = "0.5.0"

[features]
default = ["frontend"]
frontend = ["include_dir", "warp/compression"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
