[package]
name = "dietpi-dashboard"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3.2", default-features = false, features = ["websocket", "tls"]}
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "fs", "process"] }
simple_logger = { version = "2.1.0", default-features = false, features = ["colors"] }
log = "0.4.17"
include_dir = {version = "0.7.2", optional = true}
futures = "0.3.21"
pty-process = "0.2.0"
psutil = "3.2.2"
infer = { version = "0.8.1", default-features = false }
ring = "0.16.20"
figment = { version = "0.10", features = ["toml", "env"] }
if-addrs = "0.7.0"
zip = { version = "0.6.2", default-features = false, features = ["time"] }
walkdir = "2.3.2"
jsonwebtoken = { version = "8.1.1", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.58"
once_cell = "1.12.0"
serde_json = "1.0.82"

[features]
default = ["frontend"]
frontend = ["include_dir"]
compression = ["frontend"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[profile.release.package.serde]
opt-level = 3

[profile.release.package.psutil]
opt-level = 3

[profile.release.package.zip]
opt-level = 3

[profile.release.package."*"]
opt-level = "s"
